# economic_pipeline

./: .env.example  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml  setup_db.py  start.sh
sql/: schema.sql
src/: config.py  run_pipeline.py
src/app/: main.py  queries.py  transforms.py
src/db/: connection.py
src/extract/: alpha_vantage.py  fred.py
src/load/: load.py
src/transform/: transform.py
