[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "economic-pipeline"
version = "0.1.0"
dependencies = [
    "streamlit",
    "plotly",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]